# encryption-in-C

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/test/sinhpn/md5test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: md5.h  native-lib.cpp
app/src/main/java/test/sinhpn/md5test/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/test/sinhpn/md5test/: ExampleUnitTest.java
